<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    tools:context="com.example.ruby.voicerater.Ab">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="bottom"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/userInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/useridinit"
                android:textSize="34sp"
                android:maxLines="2"

                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginBottom="20dp">

            <ImageButton
                android:contentDescription="@string/startbtn"
                android:id="@+id/start"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/startbtn" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"

                android:layout_toRightOf="@id/start"
                android:layout_toEndOf="@id/start"

                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    android:textSize="18sp"
                    android:background="@android:color/transparent"/>

                <Button
                    android:id="@+id/exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/exit"
                    android:textSize="18sp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
